[gd_scene load_steps=10 format=2]

[ext_resource path="res://Cards/IceBlastCard.tscn" type="PackedScene" id=1]
[ext_resource path="res://Cards/LightningChainCard.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cards/FireBlastCard.tscn" type="PackedScene" id=3]
[ext_resource path="res://PixelRPG.tres" type="DynamicFont" id=4]
[ext_resource path="res://UI/CardShop.gd" type="Script" id=6]
[ext_resource path="res://Cards/TwoLizardsCard.tscn" type="PackedScene" id=7]
[ext_resource path="res://Cards/WallCard.tscn" type="PackedScene" id=8]
[ext_resource path="res://Cards/ThreeBearsCard.tscn" type="PackedScene" id=9]
[ext_resource path="res://Cards/BulkUpCard.tscn" type="PackedScene" id=10]

[node name="CardShop" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
card_list = [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ]

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 80.0
margin_top = 60.0
margin_right = 560.0
margin_bottom = 300.0
rect_min_size = Vector2( 480, 240 )

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 473.0
margin_bottom = 233.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer"]
margin_left = 105.0
margin_top = 70.0
margin_right = 361.0
margin_bottom = 156.0
rect_min_size = Vector2( 256, 0 )
custom_constants/separation = 8

[node name="Label" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 6.0
custom_fonts/font = ExtResource( 4 )
text = "Buy a new card?"
align = 1
valign = 1

[node name="Space" type="Control" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 14.0
margin_right = 256.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 8 )

[node name="Cards" type="HBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 256.0
margin_bottom = 30.0
custom_constants/separation = 8
alignment = 1

[node name="Space2" type="Control" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 256.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 16 )

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 256.0
margin_bottom = 86.0
rect_min_size = Vector2( 0, 24 )

[node name="NotEnough" type="Label" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 256.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
text = "Not enough gold for that card!"
align = 1
valign = 1

[node name="BuyButton" type="Button" parent="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 194.0
margin_right = 321.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
text = "Buy Selected Card"

[node name="PassButton" type="Button" parent="PanelContainer"]
margin_left = 453.0
margin_top = 7.0
margin_right = 473.0
margin_bottom = 27.0
size_flags_horizontal = 10
size_flags_vertical = 0
text = "X"

[connection signal="pressed" from="PanelContainer/CenterContainer/VBoxContainer/HBoxContainer/BuyButton" to="." method="_on_BuyButton_pressed"]
[connection signal="pressed" from="PanelContainer/PassButton" to="." method="_on_PassButton_pressed"]
